--- a/example/src/main/res/layout/left.xml
+++ b/example/src/main/res/layout/left.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal" />
 
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:layout_below="@id/time"
         android:padding="10dp"
-        android:src="@mipmap/logo" />
+        android:src="@drawable/robot" />
 
     <TextView
         android:id="@+id/tv"
@@ -26,6 +26,6 @@
         android:layout_marginRight="50dp"
         android:layout_toRightOf="@id/iv"
         android:background="@drawable/aio_friend_bg_nor_11"
-        android:gravity="center" />
+        android:gravity="left" />
 
 </RelativeLayout>
