--- a/example/src/main/res/layout/right.xml
+++ b/example/src/main/res/layout/right.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal" />
 
@@ -16,7 +16,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/time"
         android:padding="10dp"
-        android:src="@drawable/robot" />
+        android:src="@mipmap/logo" />
 
     <TextView
         android:id="@+id/tv"
@@ -27,6 +27,6 @@
         android:layout_marginLeft="50dp"
         android:layout_toLeftOf="@id/iv"
         android:background="@drawable/aio_user_bg_nor_11"
-        android:gravity="center" />
+        android:gravity="left" />
 
 </RelativeLayout>
