--- a/example/src/main/res/layout/left.xml
+++ b/example/src/main/res/layout/left.xml
@@ -15,7 +15,7 @@
         android:layout_height="70dp"
         android:layout_below="@id/time"
         android:padding="10dp"
-        android:src="@drawable/robot" />
+        android:src="@mipmap/logo" />
 
     <TextView
         android:id="@+id/tv"
