解决软键盘冲突

--- a/base-libs/src/main/res/values/colors.xml
+++ b/base-libs/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="item_text_color">#11ABE2</color>
 </resources>
