优化聊天布局

--- a/example/src/main/res/layout/fragment_mine.xml
+++ b/example/src/main/res/layout/fragment_mine.xml
@@ -18,7 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:text="清空聊天记录"
             android:textColor="@color/item_text_confirm"
             android:textSize="16sp"/>
@@ -54,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10.0dip"
+                android:layout_marginLeft="10dp"
                 android:text="录音语言：普通话"
                 android:textColor="#333333"
                 android:textSize="16sp"/>
@@ -78,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10.0dip"
+                android:layout_marginLeft="10dp"
                 android:text="朗读语言：普通话"
                 android:textColor="#333333"
                 android:textSize="16sp"/>
